# riscv-5stage-simulator

./: .rustfmt.toml  .travis.yml  Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
riscv_5stage_simulator/: all.html  index.html  sidebar-items.js
riscv_5stage_simulator/alu/: enum.AluOp.html  enum.AluSrc.html  fn.alu.html  index.html  sidebar-items.js
riscv_5stage_simulator/ca_simulator/: fn.run.html  index.html  sidebar-items.js
riscv_5stage_simulator/consts/: constant.BIT30_MASK.html  constant.BIT30_SHIFT.html  constant.BYTE_SIZE.html  constant.FUNCT3_MASK.html  constant.FUNCT3_SHIFT.html  constant.FUNCT7_MASK.html  constant.FUNCT7_SHIFT.html  constant.HALFWORD_SIZE.html  constant.HALT.html  constant.NOP.html  constant.OPCODE_MASK.html  constant.RD_MASK.html  constant.RD_SHIFT.html  constant.RS1_MASK.html  constant.RS1_SHIFT.html  constant.RS2_MASK.html  constant.RS2_SHIFT.html  constant.WORD_SIZE.html  index.html  sidebar-items.js
riscv_5stage_simulator/hazards/: fn.ex_hazard_src1.html  fn.ex_hazard_src2.html  fn.load_hazard.html  fn.mem_hazard_src1.html  index.html  (+4 more)
scripts/: create_ghpages_redirect_index.sh  enable_integration_test_debugging.sh
src/: alu.rs  ca_simulator.rs  consts.rs  hazards.rs  ia_simulator.rs  immediates.rs  instruction.rs  lib.rs  main.rs  memory.rs  pipeline.rs  register.rs  stages.rs
tests/: risc5_test_assembly_disassembly.txt  riscv_32i_disassembly.rs  riscv_32i_sorting_disassembly.txt  test_riscv_32i_disass.txt  test_riscv_32i_disassembly.rs  test_riscv_32i_disassembly_1.txt
(+88 files in other folders)
