[package]
name = "riscv-5stage-simulator"
version = "0.1.0"
authors = ["Douglas Anderson <Douglas.Anderson-1@colorado.edu>"]

[lib]
name = "riscv_5stage_simulator"
path = "src/lib.rs"

[[bin]]
name = "casim"
path = "src/main.rs"
doc = false

[dependencies]
env_logger = "0.4.3"
log = "0.3"
regex = "0.2"
